fix: column align

--- a/src/app/candidatelist/candidatelist.component.scss
+++ b/src/app/candidatelist/candidatelist.component.scss
@@ -1,3 +1,7 @@
 .full-width-table {
   width: 100%;
 }
+
+.mat-column-yoe {
+  text-align: center;
+}
